Fixes based on code review

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -5,6 +5,8 @@ DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
 DJANGO_SUPERUSER_USERNAME=admin1111
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
+
+# postgres settingse
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=people_depot_dev
 SQL_USER=people_depot
@@ -12,6 +14,15 @@ SQL_PASSWORD=people_depot
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+
+# To use sqlite, comment out the above settings and uncomment the following
+# SQL_ENGINE=
+# SQL_DATABASE=
+# SQL_USER=
+# SQL_PASSWORD=
+# SQL_HOST=
+# SQL_PORT=
+# DATABASE=
 
 COGNITO_DOMAIN=peopledepot
 COGNITO_AWS_REGION=us-east-2
