Remove .env.local-example, correct settings for local in .env.docker-example

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -6,7 +6,7 @@ DJANGO_SUPERUSER_USERNAME=admin1111
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
-# postgres settingse
+# postgres settings for docker
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=people_depot_dev
 SQL_USER=people_depot
@@ -15,7 +15,16 @@ SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 
-# To use sqlite, comment out the above settings and uncomment the following
+# postgres settings for local development
+# SQL_ENGINE=django.db.backends.postgresql
+# SQL_DATABASE=postgres
+# SQL_USER=
+# SQL_PASSWORD=
+# SQL_HOST=localhost
+# SQL_PORT=5432
+# DATABASE=postgres
+
+# sqlite settings for local development
 # SQL_ENGINE=
 # SQL_DATABASE=
 # SQL_USER=
