--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -140,6 +140,7 @@ repos:
       - id: mdformat
         exclude: |
           (?x)^(
+            .github/ISSUE_TEMPLATE/|
             docs/CONTRIBUTING.md$|
             docs/index.md$|
             docs/license.md$
