--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,13 +68,13 @@ repos:
     hooks:
       - id: blacken-docs
         additional_dependencies:
-        - black==24.2.0
+          - black==24.2.0
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
-        exclude: '^app/core/migrations/|^app/data/migrations/|^app/core/scripts'
+        exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts"
         args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses]
         additional_dependencies:
           [
@@ -108,7 +108,7 @@ repos:
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
     hooks:
-    -   id: shellcheck
+      - id: shellcheck
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
@@ -128,7 +128,7 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: [ --fix ]
+        args: [--fix]
         exclude: ^app/core/migrations/
       # Run the formatter.
       - id: ruff-format
@@ -175,4 +175,4 @@ repos:
         pass_filenames: false
 
 ci:
-    skip: [check-django-migrations]
+  skip: [check-django-migrations]
