Get update api tests working

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -30,6 +30,8 @@ djangorestframework==3.14.0
     # via
     #   drf-jwt
     #   drf-spectacular
+djangorestframework-simplejwt==5.3.1
+    # via drf-jwt
 drf-jwt==1.19.2
 drf-spectacular==0.27.1
 exceptiongroup==1.2.0
