--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -14,6 +14,10 @@ coverage==7.4.3
 cryptography==42.0.5
     # via pyjwt
 django==4.2.11
+# kb changes
+django-allauth==0.58.2
+django-autocomplete-light==3.9.7
+django-cors-headers==4.3.1
     # via
     #   django-extensions
     #   django-linear-migrations
@@ -25,6 +29,7 @@ django==4.2.11
 django-extensions==3.2.3
 django-linear-migrations==2.12.0
 django-phonenumber-field==7.3.0
+django-querysetsequence==0.17.0
 django-timezone-field==6.1.0
 djangorestframework==3.14.0
     # via
