--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,9 @@ exclude =
   load_data.py,
   utils,
   venv,
-  app/core/scripts
-
+  app/core/scripts,
+  app/core/utils,
+  app/core/utils/load_data.py
 max-complexity = 4
 per-files-ignore = */utils/*.*: N818
 
