--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,8 @@ repos:
       - id: fix-encoding-pragma
         args: [--remove]
       - id: fix-byte-order-marker
+      - id: name-tests-test
+        args: [--pytest-test-first]
 
       # general quality checks
       - id: mixed-line-ending
