--- a/setup.cfg
+++ b/setup.cfg
@@ -18,5 +18,6 @@ skip_glob = */migrations/*.py
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = peopledepot.settings
 python_files = tests.py test_*.py *_tests.py
+norecursedirs = utils
 # addopts = -vv -x --last-failed --cov --cov-report html
 addopts = -x --failed-first --cov --cov-report term-missing --no-cov-on-fail
