--- a/setup.cfg
+++ b/setup.cfg
@@ -2,14 +2,12 @@
 max-line-length = 119
 exclude =
   migrations,
-  load_data.py,
-  utils,
   venv,
-  app/core/scripts,
-  app/core/utils,
-  app/core/utils/load_data.py
+  app/core/scripts
 max-complexity = 4
 per-files-ignore = */utils/*.*: N818
+ignore = PT023
+extend-ignore = PT023
 
 [isort]
 profile = black
