pre-commit ignore makepath.sh and migrations dir

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,8 @@ max-line-length = 121
 exclude =
   migrations,
   venv,
-  app/core/scripts
+  app/core/scripts,
+  app/core/migrations
 max-complexity = 4
 per-files-ignore = */utils/*.*: N818
 ignore = PT023
