--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
       - id: check-toml
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
+        exclude: ^scripts/makepath.sh
 
       # git checks
       - id: check-merge-conflict
@@ -75,7 +76,8 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        args: [--max-complexity=4, --pytest-fixture-no-parentheses]
+        exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts|^scripts/makepath.sh"
+        args: [--config=setup.cfg, --max-complexity=4, --pytest-fixture-no-parentheses, --exclude=migrations,app/core/scripts,app/core/migrations,scripts/makepath.sh]
         additional_dependencies:
           [
             flake8-bugbear,
@@ -109,6 +111,7 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
+        exclude: ^scripts/makepath.sh
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
