docs: how to switch back to debian docker image

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   name: material
   features:
     - content.action.edit
+    - content.action.view
     - content.code.annotate
     - content.code.copy
     - content.code.select
@@ -27,6 +28,8 @@ markdown_extensions:
   - md_in_html
   - pymdownx.betterem
   - pymdownx.blocks.details
+  - pymdownx.critic:
+      mode: view
   - pymdownx.details
   - pymdownx.highlight:
       anchor_linenums: true
