--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ extend-ignore = PT023
 
 [isort]
 profile = black
-skip_glob = */migrations/*.py
+skip_glob = */migrations/*.py, */docs/*/*.html
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = peopledepot.settings
