Move load_data to tests dir

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
         args: [--remove]
       - id: fix-byte-order-marker
       - id: name-tests-test
-        exclude: '^(app/core/tests/utils/.*)$'
+        exclude: '^(app/core/tests/utils/.*|app/core/tests/management/commands/.*)$'
         args: [--pytest-test-first]
 
       # general quality checks
