--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,6 @@ skip_glob = */migrations/*.py, */docs/*/*.html
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = peopledepot.settings
 python_files = tests.py test_*.py *_tests.py
-norecursedirs = utils
+norecursedirs = utils, migrations, venv, docs
 # addopts = -vv -x --last-failed --cov --cov-report html
 addopts = -x --failed-first --cov --cov-report term-missing --no-cov-on-fail
