--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,7 @@ repos:
         args: [--remove]
       - id: fix-byte-order-marker
       - id: name-tests-test
+        exclude: '^(app/core/tests/utils/.*|app/core/tests/management/commands/.*)$'
         args: [--pytest-test-first]
 
       # general quality checks
@@ -74,8 +75,8 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts"
-        args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses]
+        exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts|^scripts/makepath.sh"
+        args: [--max-complexity=4, --max-line-length=119, --pytest-fixture-no-parentheses]
         additional_dependencies:
           [
             flake8-bugbear,
@@ -109,6 +110,7 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
+        exclude: ^scripts/makepath.sh
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
