--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,7 +76,7 @@ repos:
     hooks:
       - id: flake8
         exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts|^scripts/makepath.sh"
-        args: [--max-complexity=4, --max-line-length=119, --pytest-fixture-no-parentheses]
+        args: [--max-line-length=119, --max-complexity=4 --pytest-fixture-no-parentheses]
         additional_dependencies:
           [
             flake8-bugbear,
