--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=foo
-SECRET_API_SECRET=bar
+SECRET_API_KEY=bar
 DJANGO_PORT=8000
 DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
 DJANGO_SUPERUSER_USERNAME=admin1111
