Force port to be 5433

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -21,7 +21,7 @@ DATABASE=postgres
 # SQL_USER=
 # SQL_PASSWORD=
 # SQL_HOST=localhost
-# SQL_PORT=5432
+SQL_PORT=5432
 # DATABASE=postgres
 
 # sqlite settings for local development
