--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,6 @@ repos:
       - id: check-toml
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
-        exclude: ^scripts/makepath.sh
 
       # git checks
       - id: check-merge-conflict
@@ -64,7 +63,7 @@ repos:
     hooks:
       - id: black
         exclude: ^app/core/migrations/
-
+        args: ["--line-length", "79"]
   - repo: https://github.com/adamchainz/blacken-docs
     rev: 1.18.0
     hooks:
@@ -76,8 +75,8 @@ repos:
     rev: 7.1.0
     hooks:
       - id: flake8
-        exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts|^scripts/makepath.sh"
-        args: [--config=setup.cfg, --max-complexity=4, --pytest-fixture-no-parentheses, --exclude=migrations,app/core/scripts,app/core/migrations,scripts/makepath.sh]
+        exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts"
+        args: [--max-complexity=4, --pytest-fixture-no-parentheses, --exclude=migrations,app/core/scripts,app/core/migrations]
         additional_dependencies:
           [
             flake8-bugbear,
@@ -111,7 +110,6 @@ repos:
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
-        exclude: ^scripts/makepath.sh
 
   # - repo: https://github.com/econchick/interrogate
   #   rev: 1.4.0
@@ -131,11 +129,13 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: [--fix]
+        args: ["--fix", "--line-length", "79"]
         exclude: ^app/core/migrations/
       # Run the formatter.
       - id: ruff-format
         exclude: ^app/core/migrations/
+        args: ["--line-length", "79"]
+
 
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.17
