--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,7 +63,6 @@ repos:
     hooks:
       - id: black
         exclude: ^app/core/migrations/
-        args: ["--line-length", "79"]
   - repo: https://github.com/adamchainz/blacken-docs
     rev: 1.18.0
     hooks:
@@ -76,7 +75,7 @@ repos:
     hooks:
       - id: flake8
         exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts"
-        args: [--max-complexity=4, --pytest-fixture-no-parentheses, --exclude=migrations,app/core/scripts,app/core/migrations]
+        args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses, --exclude=migrations,app/core/scripts,app/core/migrations]
         additional_dependencies:
           [
             flake8-bugbear,
@@ -129,12 +128,11 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: ["--fix", "--line-length", "79"]
+        args: [--fix]
         exclude: ^app/core/migrations/
       # Run the formatter.
       - id: ruff-format
         exclude: ^app/core/migrations/
-        args: ["--line-length", "79"]
 
 
   - repo: https://github.com/executablebooks/mdformat
