Changes for pre-commit to add info for pytest

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -161,7 +161,7 @@ repos:
         stages: [push]
       - id: test
         name: test
-        entry: ./scripts/test.sh
+        entry: ./scripts/test.sh -s --verbose --no-cov
         language: system
         pass_filenames: false
         always_run: true
