--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,9 +73,10 @@ repos:
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
     hooks:
+
       - id: flake8
         exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts"
-        args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses]
+        args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses, --ignore=PT004]
         additional_dependencies:
           [
             flake8-bugbear,
@@ -128,7 +129,7 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: [--fix]
+        args: [--fix --ignore=PT004]
         exclude: ^app/core/migrations/
       # Run the formatter.
       - id: ruff-format
