--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -2,8 +2,9 @@
 max-line-length = 119
 exclude = '^(app/core/migrations/.*)$'
 max-complexity = 4
-per-files-ignore = */utils/*.*: N818
-
+per-file-ignores = 
+    app/core/tests/conftest.py: PT004
+    */utils/*.*: N818
 [isort]
 profile = black
 skip_glob = */migrations/*.py
