--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,7 +76,7 @@ repos:
 
       - id: flake8
         exclude: "^app/core/migrations/|^app/data/migrations/|^app/core/scripts"
-        args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses, --ignore=PT004]
+        args: [--max-line-length=119, --max-complexity=4, --pytest-fixture-no-parentheses]
         additional_dependencies:
           [
             flake8-bugbear,
@@ -129,7 +129,7 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
-        args: [--fix --ignore=PT004]
+        args: [--fix]
         exclude: ^app/core/migrations/
       # Run the formatter.
       - id: ruff-format
