--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -74,6 +74,7 @@ pytest==8.0.2
     #   pytest-django
 pytest-cov==4.1.0
 pytest-django==4.8.0
+pytest-xdist==3.6.1
 pytz==2024.1
     # via djangorestframework
 pyyaml==6.0.1
