modify db docker service to use the env file

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -7,12 +7,12 @@ DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
 # postgres settings for docker
-SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=people_depot_dev
-SQL_USER=people_depot
-SQL_PASSWORD=people_depot
-SQL_HOST=db
-SQL_PORT=5432
+POSTGRES_ENGINE=django.db.backends.postgresql
+POSTGRES_DATABASE=people_depot_dev
+POSTGRES_USER=people_depot
+POSTGRES_PASSWORD=people_depot
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 DATABASE=postgres
 
 # postgres settings for local development
