updated postgres settings for local development in env.docker-example

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -8,7 +8,7 @@ DJANGO_SUPERUSER_PASSWORD=admin
 
 # postgres settings for docker
 POSTGRES_ENGINE=django.db.backends.postgresql
-POSTGRES_DATABASE=people_depot_dev
+POSTGRES_DB=people_depot_dev
 POSTGRES_USER=people_depot
 POSTGRES_PASSWORD=people_depot
 POSTGRES_HOST=db
@@ -16,12 +16,12 @@ POSTGRES_PORT=5432
 DATABASE=postgres
 
 # postgres settings for local development
-# SQL_ENGINE=django.db.backends.postgresql
-# SQL_DATABASE=postgres
-# SQL_USER=
-# SQL_PASSWORD=
-# SQL_HOST=localhost
-# SQL_PORT=5432
+# POSTGRES_ENGINE=django.db.backends.postgresql
+# POSTGRES_DB=postgres
+# POSTGRES_USER=
+# POSTGRES_PASSWORD=
+# POSTGRES_HOST=localhost
+# POSTGRES_PORT=5432
 # DATABASE=postgres
 
 # sqlite settings for local development
