updated .env.docker-example and settings.py

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -7,28 +7,28 @@ DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
 # postgres settings for docker
-POSTGRES_ENGINE=django.db.backends.postgresql
+SQL_ENGINE=django.db.backends.postgresql
 POSTGRES_DB=people_depot_dev
 POSTGRES_USER=people_depot
 POSTGRES_PASSWORD=people_depot
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
+SQL_HOST=db
+SQL_PORT=5432
 DATABASE=postgres
 
 # postgres settings for local development
-# POSTGRES_ENGINE=django.db.backends.postgresql
-# POSTGRES_DB=postgres
-# POSTGRES_USER=
-# POSTGRES_PASSWORD=
-# POSTGRES_HOST=localhost
-# POSTGRES_PORT=5432
+# SQL_ENGINE=django.db.backends.postgresql
+# SQL_DATABASE=postgres
+# SQL_USER=
+# SQL_PASSWORD=
+# SQL_HOST=localhost
+# SQL_PORT=5432
 # DATABASE=postgres
 
 # sqlite settings for local development
 # SQL_ENGINE=
-# SQL_DATABASE=
-# SQL_USER=
-# SQL_PASSWORD=
+# SQL_DATABASE=POSTGRES_DB
+# SQL_USER=POSTGRES_USER
+# SQL_PASSWORD=POSTGRES_PASSWORD
 # SQL_HOST=
 # SQL_PORT=
 # DATABASE=
