--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - 5432:5432
     env_file:
-      - ./app/.env.docker-example
+      - ./app/.env.docker
   mkdocs:
     image: hackforlaops/mkdocs:latest
     command: mkdocs serve --dev-addr 0.0.0.0:8000
