Revert changes to files related to /login local

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -19,6 +19,7 @@ django==4.2.16
     #   djangorestframework
     #   drf-jwt
     #   drf-spectacular
+django-cors-headers==4.5.0
 django-extensions==3.2.3
 django-linear-migrations==2.16.0
 django-phonenumber-field==8.0.0
