--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -11,6 +11,8 @@ POSTGRES_USER=people_depot
 POSTGRES_PASSWORD=people_depot
 POSTGRES_DB=people_depot_dev
 
+CORS_ALLOWED_ORIGINS="http://localhost:3000 https://your-production-server.com"
+
 # postgres settings for docker
 SQL_USER=$POSTGRES_USER
 SQL_PASSWORD=$POSTGRES_PASSWORD
@@ -19,24 +21,6 @@ SQL_ENGINE=django.db.backends.postgresql
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
-
-# postgres settings for local development
-# SQL_ENGINE=django.db.backends.postgresql
-# SQL_DATABASE=postgres
-# SQL_USER=
-# SQL_PASSWORD=
-# SQL_HOST=localhost
-# SQL_PORT=5432
-# DATABASE=postgres
-
-# sqlite settings for local development
-# SQL_ENGINE=
-# SQL_DATABASE=
-# SQL_USER=
-# SQL_PASSWORD=
-# SQL_HOST=
-# SQL_PORT=
-# DATABASE=
 
 COGNITO_DOMAIN=peopledepot
 COGNITO_AWS_REGION=us-west-2
