Revert changes to files related to /login local

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -6,6 +6,8 @@ DJANGO_SUPERUSER_USERNAME=admin1111
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
+CORS_ALLOWED_ORIGINS="http://localhost:3000 https://your-production-server.com"
+
 # postgres settings for docker
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=people_depot_dev
@@ -14,24 +16,6 @@ SQL_PASSWORD=people_depot
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
-
-# postgres settings for local development
-# SQL_ENGINE=django.db.backends.postgresql
-# SQL_DATABASE=postgres
-# SQL_USER=
-# SQL_PASSWORD=
-# SQL_HOST=localhost
-# SQL_PORT=5432
-# DATABASE=postgres
-
-# sqlite settings for local development
-# SQL_ENGINE=
-# SQL_DATABASE=
-# SQL_USER=
-# SQL_PASSWORD=
-# SQL_HOST=
-# SQL_PORT=
-# DATABASE=
 
 COGNITO_DOMAIN=peopledepot
 COGNITO_AWS_REGION=us-west-2
