style: mdformat fix all issue templates

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -140,13 +140,12 @@ repos:
       - id: mdformat
         exclude: |
           (?x)^(
-            .github/ISSUE_TEMPLATE/|
             docs/index.md$|
             docs/license.md$
           )
         additional_dependencies:
           - mdformat-admon
-          - mdformat-mkdocs[recommended]>=2.0.0
+          - mdformat-mkdocs[recommended]
 
   - repo: local
     hooks:
