Modify db docker service to use the env file (#437)
* modifed db docker service in docker-compose.yml to use the env file
* updated postgres settings for local development in env.docker-example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,10 @@ services:
     image: postgres:13.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=people_depot
-      - POSTGRES_PASSWORD=people_depot
-      - POSTGRES_DB=people_depot_dev
     ports:
       - 5432:5432
+    env_file:
+      - ./app/.env.docker
   mkdocs:
     image: hackforlaops/mkdocs:latest
     command: mkdocs serve --dev-addr 0.0.0.0:8000
