--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -6,11 +6,16 @@ DJANGO_SUPERUSER_USERNAME=admin1111
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
 
+# settings for db container environment variables in compose file
+POSTGRES_USER=people_depot
+POSTGRES_PASSWORD=people_depot
+POSTGRES_DB=people_depot_dev
+
 # postgres settings for docker
+SQL_USER=$POSTGRES_USER
+SQL_PASSWORD=$POSTGRES_PASSWORD
+SQL_DATABASE=$POSTGRES_DB
 SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=people_depot_dev
-SQL_USER=people_depot
-SQL_PASSWORD=people_depot
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
