--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -144,8 +144,7 @@ repos:
             docs/license.md$
           )
         additional_dependencies:
-          - mdformat-admon
-          - mdformat-mkdocs[recommended]
+          - mdformat-mkdocs[recommended]>=4.1.2
 
   - repo: local
     hooks:
