set correct role name for deployment

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -16,7 +16,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: arn:aws:iam::035866691871:role/gha-incubator
-          role-session-name: ghaincubatorsession
+          role-session-name: incubator-cicd-people-depot
           aws-region: us-west-2
 
       - name: Login to Amazon ECR
