--- a/app/Dockerfile-aws
+++ b/app/Dockerfile-aws
@@ -58,6 +58,10 @@ COPY . /app/
  
 # Expose the Django port
 EXPOSE 8000
+
+
+# run entrypoint.sh
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
  
 # Run Django’s development server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
