use correct entrypoint file in aws

--- a/app/Dockerfile-aws
+++ b/app/Dockerfile-aws
@@ -61,7 +61,7 @@ EXPOSE 8000
 
 
 # run entrypoint.sh
-ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
+ENTRYPOINT ["/usr/src/app/entrypoint-aws.sh"]
  
 # Run Django’s development server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
