fix aws dockerfile

--- a/app/Dockerfile-aws
+++ b/app/Dockerfile-aws
@@ -28,33 +28,10 @@ RUN \
 # copy project
 COPY . .
 
-# run entrypoint.sh
-# Use the official Python runtime image
-FROM python:3.13  
- 
-# Create the app directory
-RUN mkdir /app
- 
-# Set the working directory inside the container
-WORKDIR /app
- 
-# Set environment variables 
-# Prevents Python from writing pyc files to disk
-ENV PYTHONDONTWRITEBYTECODE=1
-#Prevents Python from buffering stdout and stderr
-ENV PYTHONUNBUFFERED=1 
- 
-# Upgrade pip
-RUN pip install --upgrade pip 
- 
-# Copy the Django project  and install dependencies
-COPY requirements.txt  /app/
- 
-# run this command to install all dependencies 
-RUN pip install --no-cache-dir -r requirements.txt
- 
-# Copy the Django project to the container
-COPY . /app/
+# copy entrypoint-aws.sh
+COPY ./entrypoint-aws.sh .
+RUN sed -i 's/\r$//g' /usr/src/app/entrypoint-aws.sh \
+  && chmod +x /usr/src/app/entrypoint-aws.sh
  
 # Expose the Django port
 EXPOSE 8000
