--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,7 +2,7 @@ name: deploy-dev
 on:
   push:
     branches:
-      - issue_330_deploy_dev
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
