Replaced space with comma in ALLOWED_HOSTS (#473)

--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -1,7 +1,7 @@
 DEBUG=True
 SECRET_KEY=foo
 DJANGO_PORT=8000
-DJANGO_ALLOWED_HOSTS="localhost 127.0.0.1 [::1]"
+DJANGO_ALLOWED_HOSTS="localhost,127.0.0.1,[::1]"
 DJANGO_SUPERUSER_USERNAME=admin1111
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
