--- a/app/.env.docker-example
+++ b/app/.env.docker-example
@@ -18,12 +18,20 @@ SQL_USER=$POSTGRES_USER
 SQL_PASSWORD=$POSTGRES_PASSWORD
 SQL_DATABASE=$POSTGRES_DB
 SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=people_depot_dev
+SQL_USER=people_depot
+SQL_PASSWORD=people_depot
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 
-COGNITO_DOMAIN=peopledepot
-COGNITO_AWS_REGION=us-west-2
-COGNITO_USER_POOL=us-west-2_Fn4rkZpuB
+# used by docker
+POSTGRES_DB: $SQL_DATABASE
+POSTGRES_USER: $SQL_USER
+POSTGRES_PASSWORD: $SQL_PASSWORD
 
-PEOPLE_DEPOT_API_SECRET=people-depot-api-secret
+# Define below if using COGNITO
+# COGNITO_DOMAIN=peopledepot
+# COGNITO_AWS_REGION=us-west-2
+# COGNITO_USER_POOL=us-west-2_Fn4rkZpuB
+
