--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
     - navigation.expand
     - navigation.indexes
     - navigation.sections
+    - navigation.tabs
 
 plugins:
   - search
