docs: add tags to pages
- also move onboarding pages into a folder

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,14 @@ plugins:
   - search
   - autolinks
   - awesome-pages
-  - tags
+  - meta
+  - tags:
+      tags_allowed:
+        - git
+        - GitHub Actions
+        - Cognito
+        - Authentication
+        - Onboarding
 
 markdown_extensions:
   - abbr
