--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -1,8 +1,7 @@
 [flake8]
 max-line-length = 119
-exclude = migrations
+exclude = '^(app/core/migrations/.*)$'
 max-complexity = 4
-
 [isort]
 profile = black
 skip_glob = */migrations/*.py
