--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,7 @@ repos:
       - id: fix-byte-order-marker
       - id: name-tests-test
         args: [--pytest-test-first]
+        exclude: ^app/core/tests/utils/
 
       # general quality checks
       - id: mixed-line-ending
