docs: add howto generate db table description

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ plugins:
         - Cognito
         - Authentication
         - Onboarding
+        - database
+        - postgres
 
 markdown_extensions:
   - abbr
