--- a/app/requirements.in
+++ b/app/requirements.in
@@ -1,3 +1,4 @@
+bandit
 django~=4.2.0
 django-extensions
 django-linear-migrations
@@ -10,5 +11,6 @@ markdown
 psycopg2-binary
 pytest-cov
 pytest-django
+pytest-mock
 pytest-xdist
 tzdata
