Update dependabot grouping for Python dependencies

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -29,7 +29,6 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      dev-deps:
-        dependency-type: "development"
-      prod-deps:
-        dependency-type: "production"
+      python-deps:
+        patterns:
+          - "*"
